registerController and swagger output updated
