# middlewares/sendTokenResponse.js
@@ -1,10 +1,10 @@
-const { getUserInfoFromToken } = require('../controllers/userControllers/userController')
+// const { getUserInfoFromToken } = require('../controllers/userControllers/userController')
 
 const sendTokenResponse = async (user, statusCode, res) => {
     const token = user.getSignedJwtToken()
 
-    const userInfo = await getUserInfoFromToken(token)
-    res.json({ success: true, userInfo: userInfo, token: token})
+    // const userInfo = await getUserInfoFromToken(token)
+    res.status(201).json({ success: true, token: token})
     return
 }
 
